[tool.poetry]
name = "bert-chinese"
version = "0.1.0"
description = ""
authors = ["Simon Liang <no.lhr0909@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
rasa = {extras = ["transformers"], version = "^2.2.2"}
transformers = {version = "2.11.0", extras = ["tf-cpu", "torch"]}
jieba = "^0.42.1"
rasa_chinese = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
